--- a/css/style.css
+++ b/css/style.css
@@ -128,6 +128,7 @@ body {
     list-style-type: none;
     padding-left: 0;
     margin-top: 42px;
+    margin-bottom: 65px;
 }
 .menu > li {
     padding-left: 20px;
@@ -170,4 +171,93 @@ body {
     height: 0;
     border: 7px solid transparent;
     border-bottom: 7px solid #ed252d;
+}
+.box {
+    background-color: #fff;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.11);
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 100px;
+}
+.box-item {
+    padding: 64px 0 58px 55px;
+    box-sizing: content-box;
+}
+.number {
+    font-family: 'Roboto', sans-serif;
+    font-size: 120px;
+    font-weight: 900;
+    position: relative;
+    margin-bottom: 0;
+    margin-top: 0;
+    color: #282828;
+}   
+.number::after {
+    content: '';
+    display: block;
+    position: absolute;
+}
+.number-one::after {
+    background-image: url(../image/icon01.png);
+    width: 126px;
+    height: 71px;
+    left: 69px;
+    top: calc(50% - 35px);
+}
+.number-two::after {
+    background-image: url(../image/icon02.png);
+    width: 184px;
+    height: 81px;
+    left: 88px;
+    top: calc(50% - 40px); 
+}
+.number-three::after {
+    background-image: url(../image/icon03.png);
+    width: 142px;
+    height: 68px;
+    left: 94px;
+    top: calc(50% - 34px);
+}
+.box-text {
+    border-right: 1px solid #eaeaea;
+    padding-right: 55px
+}  
+.box-item:last-child .box-text {
+    border-right: none;
+}
+.box-text h3 {
+    font-size: 45px;
+    color: #282828;
+    margin-bottom: 23px;
+}
+.box-text p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 17px;
+    color: #282828;
+    line-height: 24px;
+    margin-top: 0;   
+}
+.btn-start {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 30px;
+    font-weight: 700;
+    background-image: url(../image/bg.png);
+    background-position: center center;
+    text-decoration: none;
+    padding: 29px 58px;
+    background-repeat: no-repeat;
+}
+.page {
+    padding-top: 120px;
+    padding-bottom: 94px;
+}
+.footer {
+    background-image: url(../image/footer.png);
+    padding: 44px 0;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
 }
